--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           HTML, CSS, BOOTSTRAP, Python, Javascript, Django.
         </p>
         <p>
-          She have an work experience through virtual internship at Bharath intern on domain 
+          he have an work experience through virtual internship at Bharath intern on domain 
           Web development etc..
           
         </p>
